Uncommenting the missing relationship between Patient and Diagnosis

--- a/src/Bundle/CoreBundle/Resources/config/doctrine/model/Diagnosis.orm.yml
+++ b/src/Bundle/CoreBundle/Resources/config/doctrine/model/Diagnosis.orm.yml
@@ -20,11 +20,11 @@ Accard\Component\Core\Model\Diagnosis:
                 nullable: false
 
     oneToMany:
-#        activities:
-#            targetEntity: Accard\Component\Activity\Model\ActivityInterface
-#            mappedBy: patient
-#            orphanRemoval: true
-#            cascade: ["persist", "remove"]
+        activities:
+            targetEntity: Accard\Component\Activity\Model\ActivityInterface
+            mappedBy: patient
+            orphanRemoval: true
+            cascade: ["persist", "remove"]
         phases:
             targetEntity: Accard\Component\Core\Model\DiagnosisPhaseInstanceInterface
             mappedBy: target
