--- a/src/Bundle/CoreBundle/Resources/config/doctrine/model/Patient.orm.yml
+++ b/src/Bundle/CoreBundle/Resources/config/doctrine/model/Patient.orm.yml
@@ -34,11 +34,11 @@ Accard\Component\Core\Model\Patient:
             mappedBy: patient
             orphanRemoval: true
             cascades: ["persist", "remove"]
-#        activities:
-#            targetEntity: Accard\Component\Activity\Model\ActivityInterface
-#            mappedBy: patient
-#            orphanRemoval: true
-#            cascade: ["persist", "remove"]
+        activities:
+            targetEntity: Accard\Component\Activity\Model\ActivityInterface
+            mappedBy: patient
+            orphanRemoval: true
+            cascade: ["persist", "remove"]
         phases:
             targetEntity: Accard\Component\Core\Model\PatientPhaseInstanceInterface
             mappedBy: target
