Fixed database cascading to avoid deletion errors of non-volatile data

--- a/src/Bundle/AttributeBundle/Resources/config/doctrine/model/Attribute.orm.yml
+++ b/src/Bundle/AttributeBundle/Resources/config/doctrine/model/Attribute.orm.yml
@@ -19,5 +19,5 @@ Accard\Component\Attribute\Model\Attribute:
         fields:
             targetEntity: Accard\Component\Attribute\Model\FieldValueInterface
             mappedBy: subject
+            cascade: ["persist", "remove"]
             orphanRemoval: true
-            cascade: ["all"]
