--- a/src/Bundle/BehaviorBundle/Resources/config/doctrine/model/Behavior.orm.yml
+++ b/src/Bundle/BehaviorBundle/Resources/config/doctrine/model/Behavior.orm.yml
@@ -27,5 +27,5 @@ Accard\Component\Behavior\Model\Behavior:
         fields:
             targetEntity: Accard\Component\Behavior\Model\FieldValueInterface
             mappedBy: subject
+            cascade: ["persist", "remove"]
             orphanRemoval: true
-            cascade: ["all"]
