Incorporated angular application along with basic canvas concept

--- a/src/Bundle/WebBundle/Resources/config/routing/backend/main.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/backend/main.yml
@@ -49,3 +49,7 @@ accard_backend_behavior:
 accard_backend_attribute:
     resource: @AccardWebBundle/Resources/config/routing/backend/attribute.yml
     prefix: /attribute
+
+accard_backend_canvas:
+    resource: @AccardWebBundle/Resources/config/routing/backend/canvas.yml
+    prefix: /canvas
