Added delete blocking for patients and diagnoses with underlying data.

--- a/src/Bundle/CoreBundle/Resources/config/doctrine/model/Activity.orm.yml
+++ b/src/Bundle/CoreBundle/Resources/config/doctrine/model/Activity.orm.yml
@@ -22,7 +22,7 @@ Accard\Component\Core\Model\Activity:
                 nullable: false
         diagnosis:
             targetEntity: Accard\Component\Diagnosis\Model\DiagnosisInterface
-            inversedBy: diagnoses
+            inversedBy: activities
             joinColumn:
                 name: diagnosisId
                 referencedColumnName: id
