--- a/src/Bundle/CoreBundle/Resources/serializer/Diagnosis.Model.CodeGroup.yml
+++ b/src/Bundle/CoreBundle/Resources/serializer/Diagnosis.Model.CodeGroup.yml
@@ -9,6 +9,7 @@ Accard\Component\Diagnosis\Model\CodeGroup:
     exclusion_policy: all
     xml_root_name: code_group
     read_only: true
+    access_type: public_method
     properties:
         id:
             expose: true
