--- a/src/Bundle/WebBundle/Resources/config/twig.yml
+++ b/src/Bundle/WebBundle/Resources/config/twig.yml
@@ -9,6 +9,7 @@ parameters:
 
     twig.extension.text.class: Twig_Extensions_Extension_Text
     twig.extension.intl.class: Twig_Extensions_Extension_Intl
+    accard.twig.extension.web.class: Accard\Bundle\WebBundle\Twig\WebExtension
 
 services:
 
@@ -20,4 +21,9 @@ services:
     accard.twig.extension.intl:
         class: %twig.extension.intl.class%
         public: false
-        tags: [{name: twig.extension }]
+        tags: [{ name: twig.extension }]
+
+    accard.twig.extension.web:
+        class: %accard.twig.extension.web.class%
+        public: false
+        tags: [{ name: twig.extension }]
