Changed name of field value to option mappings to fieldValueId, and removed the cascading delete.

--- a/src/Bundle/FieldBundle/Resources/config/doctrine/model/FieldValue.orm.yml
+++ b/src/Bundle/FieldBundle/Resources/config/doctrine/model/FieldValue.orm.yml
@@ -41,7 +41,6 @@ Accard\Component\Field\Model\FieldValue:
                     optionValueId:
                         name: optionValueId
                         referencedColumnName: id
-                    fieldId:
-                        name: fieldId
-                        onDelete: CASCADE
+                    fieldValueId:
+                        name: fieldValueId
                         referencedColumnName: id
