Renamed fields in field value option map.

--- a/src/Bundle/FieldBundle/Resources/config/doctrine/model/FieldValue.orm.yml
+++ b/src/Bundle/FieldBundle/Resources/config/doctrine/model/FieldValue.orm.yml
@@ -41,6 +41,7 @@ Accard\Component\Field\Model\FieldValue:
                     optionValueId:
                         name: optionValueId
                         referencedColumnName: id
+                inverseJoinColumns:
                     fieldValueId:
                         name: fieldValueId
                         referencedColumnName: id
