--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/monolog-bundle":                "~2.4",
         "sensio/distribution-bundle":            "~3.0",
         "sensio/framework-extra-bundle":         "~3.0",
-        "doctrine/orm":                          "~2.2,>=2.2.3",
+        "doctrine/orm":                          "~2.4",
         "doctrine/doctrine-bundle":              "~1.3@dev",
         "doctrine/doctrine-cache-bundle":        "~1.0",
         "doctrine/doctrine-fixtures-bundle":     "~2.2",
