Implementation for story-85548602

--- a/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
+++ b/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
@@ -32,6 +32,11 @@ Accard\Component\Field\Model\Field:
         allowMultiple:
             type: boolean
             nullable: false
+        addable:
+            type: boolean
+            nullable: false
+            options:
+                default: false
         configuration:
             type: array
 
