--- a/src/Bundle/WebBundle/Resources/config/routing/frontend/main.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/frontend/main.yml
@@ -64,4 +64,16 @@ accard_frontend_option_quickadd:
         _controller: AccardWebBundle:Frontend:quickAddOption
         _requirements: { option: \d+ }
 
+accard_frontend_prototype_form:
+    path: /prototype/form/{type}
+    defaults:
+        _controller: AccardWebBundle:Frontend:prototypeChoiceForm
+        _requirements: { type: activity|attribute|behavior|regimen|sample }
+
+accard_frontend_prototype_redirect:
+    path: /prototype/redirect/{type}
+    defaults:
+        _controller: AccardWebBundle:Frontend:prototypeRedirect
+        _requirements: { type: activity|attribute|behavior|regimen|sample }
+
 
