Created basis for prototype subject descriptors.

--- a/src/Bundle/PrototypeBundle/Resources/config/doctrine/model/Prototype.orm.yml
+++ b/src/Bundle/PrototypeBundle/Resources/config/doctrine/model/Prototype.orm.yml
@@ -23,3 +23,7 @@ Accard\Component\Prototype\Model\Prototype:
             type: string
             length: 120
             nullable: false
+        description:
+            type: string
+            length: 255
+            nullable: true
