Updated Canvas backend and Widget Component

--- a/src/Bundle/CanvasBundle/Resources/config/doctrine/Canvas.orm.yml
+++ b/src/Bundle/CanvasBundle/Resources/config/doctrine/Canvas.orm.yml
@@ -12,8 +12,9 @@ Accard\Bundle\CanvasBundle\Entity\Canvas:
 
      id:
          id:
-             type: integer
-             generate: { strategy: AUTO }
+            type: integer
+            generator:
+                strategy: AUTO
 
      fields:
            route:
