Added ability to translate all interface elements via the database.

--- a/src/Bundle/WebBundle/Resources/config/routing/backend/main.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/backend/main.yml
@@ -53,3 +53,7 @@ accard_backend_attribute:
 accard_backend_canvas:
     resource: @AccardWebBundle/Resources/config/routing/backend/canvas.yml
     prefix: /canvas
+
+accard_backend_translations:
+    resource: "@LexikTranslationBundle/Resources/config/routing.yml"
+    prefix: /translations
