--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "mopa/bootstrap-bundle":                 "~3.0@dev",
         "twbs/bootstrap":                        "v3.2.0",
         "winzou/state-machine-bundle":           "~0.2",
-        "friendsofsymfony/elastica-bundle":      "~3.1@dev"
+        "friendsofsymfony/elastica-bundle":      "~3.1@dev",
+        "lexik/translation-bundle": "~2.0"
     }
 }
