--- a/src/Bundle/CoreBundle/Resources/config/app/main.yml
+++ b/src/Bundle/CoreBundle/Resources/config/app/main.yml
@@ -8,6 +8,10 @@
 imports:
     - { resource: accard.yml }
 
+lexik_translation:
+    fallback_locale: en
+    managed_locales: [en]
+
 doctrine_cache:
     providers:
         accard_settings:
